--- a/css/base.css
+++ b/css/base.css
@@ -1528,11 +1528,10 @@ table.filter-statistics-grid input{
     background-position: left top;
 }
 
-.title_table {
+tr.title_table {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0.7);
     font-size: 12px;
-    text-shadow: 1px 1px 1px #8F7B67;
-	cursor:default !important;
+    /*text-shadow: 1px 1px 1px #8F7B67;*/
 }
 
 tr.title_table:hover {
